--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 # Logic Analyser
 
-Simple build of the logic analyser for PlataformIO
+## SUMP Protocol Implementation for Arduino boards.
 
-this is a
+Build project for PlatforIO for https://github.com/gillham/logic_analyzer
+
